@@ -3,8 +3,10 @@ brot2 (0.9~unreleased) oneiric; urgency=low
   * Gamma release series.
   * LP#783040: Create preferences mechanism, make mouse button and scroll
   events configurable.
+  * Fix HSV palette conversion to not worry about subnormals (and instead
+  to worry about infinities).
 
- -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Sun, 30 Oct 2011 22:50:27 +1300
+ -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Mon, 31 Oct 2011 21:33:30 +1300
 
 brot2 (0.5) natty; urgency=low
 
